# study-test-platform

./: .gitignore  manage.py  pyproject.toml  untitled.ui  执行file.txt
src/demo/: command_line_interface.py
study_test_platform/: asgi.py  settings.py  urls.py  wsgi.py
test_view/: urls.py  views.py
tests/demo/: test_concurrent.py  test_designer.py  test_pluggy.py  test_pluggy2.py  test_process.py  test_pyside6.py  test_pytest_hook.py  test_thread_com_lock.py  test_thread_communicate.py  test_ui.py
